Introduced OptionalResolvedIndices class
Signed-off-by: Nils Bandener <nils.bandener@eliatra.com>